--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,10 @@ jobs:
       - name: copy docs
         run: |
           mkdir docs
-          cp -R doc-test-1/build/html doc1
-          cp -R doc-test-2/build/html doc2
-          cp -R doc-test-3/build/html doc3
+          cp -R doc-test-1/build/html/* docs/doc1
+          cp -R doc-test-2/build/html/ docs/doc2
+          cp -R doc-test-2/build/html/ docs/
+          cp -R doc-test-3/build/html/ docs/doc3
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         # if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
